--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.3.*@dev"
+        "symfony/framework-bundle": ">=2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7",
         "squizlabs/php_codesniffer": "1.4.*",
-        "satooshi/php-coveralls": "~0.6"
+	"psr/log": "1.0.*@dev",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-0": { "Yucca\\InSituUpdaterBundle": "" }
