--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,9 +1,9 @@
 yucca_in_situ_updater_form:
-    pattern:  /in_situ_updater/{form_name}
+    path:  /in_situ_updater/{form_name}
     defaults:
         _controller: YuccaInSituUpdaterBundle:Form:index
 
 yucca_in_situ_updater_delete:
-    pattern:  /in_situ_updater/delete/{form_name}
+    path:  /in_situ_updater/delete/{form_name}
     defaults:
         _controller: YuccaInSituUpdaterBundle:Delete:index
